# platform-technical-test

./: .gitignore  README.md  pyproject.toml
scripts/: deploy.py  destroy.py  test.py
scripts/helpers/: apply_terraform.py  destroy_terraform.py  init_terraform.py  test_k8s.py
