[project]
name = "platform-technical-test"
description = ""
authors = [
    {name = "Fraser Davidson",email = "fraser@frontierhq.com"}
]
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
