[project]
name = "platform-technical-test"
description = ""
authors = [
    {name = "Fraser Davidson",email = "fraser@frontierhq.com"}
]
requires-python = ">=3.11"
dependencies = [
    "python-terraform (>=0.10.1,<0.11.0)",
    "kubernetes (>=32.0.0,<33.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
